--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ textarea {
   padding: 0.625rem;
   border: 0.125rem solid var(--border-color);
   border-radius: 0.3125rem;
-  resize: none;
+  resize: vertical;
   font-size: 1rem;
   color: var(--text-color);
 }
